--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-spinners": "^0.13.3",
+    "three": "0.139.2",
     "three-css3drenderer": "^1.0.1",
     "troika-three-text": "^0.46.4",
     "tweenjs": "^1.0.2"
